# xplainfi-benchmark

./: .Rprofile  .gitignore  README.md  algorithms.R  analysis-importance.R  analysis-runtime.R  collect-results.R  collect_results.R  config-runtime.R  config.R  experiment.R  helpers.R  overview.qmd  pretest-importance.R  pretest-runtime.R  problems.R  pyproject.toml  requirements.txt  rproject.toml  run-experiment-runtime.R  run-experiment.R  run_experiment.R  setup-batchtools-runtime.R  setup-batchtools.R  setup-common.R  submit.R
R/: algorithms.R  analysis.R  helpers-python.R  helpers.R  problems.R  shiny-importance.R  shiny-runtime.R
attic/: submit.R
results/: runtime-est.rds
scripts/: eta-importance.R  eta-runtime.R  submit-importance.R  submit-runtime.R
