[project]
name = "xplainfi-benchmark"
version = "0.1.0"
description = "Python dependencies for xplainfi benchmark experiments"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "category-encoders>=2.6.0",
    "torch>=2.7.1",
    "sage-importance>=0.0.4",
    "fippy @ git+https://github.com/gcskoenig/fippy@a7a37aa5511f7074ead3289c89b1ae80036982cb",
]

[tool.uv]
# Use CPU-only PyTorch index
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
